--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -62,6 +62,16 @@ under the License.
       $(function() { setupCodeCopy(); });
     </script>
     <% end %>
+    <!-- Begin Alchemy Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPCFF13P0L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RPCFF13P0L');
+    </script>
+    <!-- End Alchemy Google tag (gtag.js) -->
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
